--- a/TwitchApplication/TwitchApplication/frontPage.Master
+++ b/TwitchApplication/TwitchApplication/frontPage.Master
@@ -4,18 +4,40 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title></title>
+    <title>
+    <asp:ContentPlaceHolder ID="frontPageTitle" runat="server">
+        
+    </asp:ContentPlaceHolder>
+    </title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/dashboard.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/homepage.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/jquery-ui-1.10.4.custom.min.css" type="text/css" />
 
     <script  src="assets/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script  src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
     <script  src="assets/js/bootstrap.min.js" type="text/javascript"></script>
     
 
 </head>
 <body>
+    <div id="dialog-login" title="Login">
+        <p>Om in te loggen vult u hieronder uw inlognaam en wachtwoord in en drukt u op de knop. 
+        Als u nog geen account heeft kunt u die een aanmaken door op de knop te drukken.</p>
+
+            <div class="input-group input-group-sm">
+                <span class="input-group-addon"></span>
+                <input type="text" class="form-control" placeholder="Inlognaam">
+            </div>
+
+            <br />
+
+            <div class="input-group input-group-sm">
+                <span class="input-group-addon"></span>
+                <input type="password" class="form-control" placeholder="Wachtwoord">
+            </div>
+    </div>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
@@ -30,9 +52,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Browse</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="/views/games.aspx">Browse</a></li>
+            <li><a href="javascript:void(0)" id="login">Log In</a></li>
+            <li><a href="javascript:void(0)" id="signup">Sign up</a></li>
             <li><a></a></li>
           </ul>
           <form class="navbar-form navbar-right">
@@ -48,4 +70,8 @@
         </asp:ContentPlaceHolder>
     </div>
   </body>
+    <script src="assets/js/dialogs.js" type="text/javascript"></script>
+    <asp:ContentPlaceHolder ID="frontPageScripts" runat="server">
+        
+    </asp:ContentPlaceHolder>
 </html>
